google search console

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta name="google-site-verification" content="eP6j39SmHtzutiDKZJdKCwGOmGa7eCqYtUKQ_NO2HMM" />
     <title>creative programmer | freelancer | webdeveloper</title>
   </head>
   <body>
