--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2QC8TSPVYT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2QC8TSPVYT");
+    </script>
+    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +39,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta name="google-site-verification" content="eP6j39SmHtzutiDKZJdKCwGOmGa7eCqYtUKQ_NO2HMM" />
+    <meta
+      name="google-site-verification"
+      content="eP6j39SmHtzutiDKZJdKCwGOmGa7eCqYtUKQ_NO2HMM"
+    />
     <title>creative programmer | freelancer | webdeveloper</title>
   </head>
   <body>
