--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
       gtag("config", "G-2QC8TSPVYT");
     </script>
     
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8877317204161459"
+     crossorigin="anonymous"></script>
+    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
